--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "ffmpeg": "^0.0.4",
         "fs-extra": "^11.1.1",
         "isomorphic-fetch": "^3.0.0",
-        "mkdirp": "^3.0.1"
+        "mkdirp": "^3.0.1",
+        "vtt-creator": "^1.1.1",
+        "webvtt-parser": "^2.2.0"
     },
     "type": "module"
 }
